<resources>
    <string name="app_name">Shower</string>
    <string name="drawer_menu_my_account">My Account</string>
    <string name="drawer_content_desc_closed">Drawer is opened</string>
    <string name="drawer_content_desc_open">Drawer is closed</string>

    //Drawer menu items
    <string name="my_account">Me</string>
    <string name="sign_out">Sign Out</string>
    <string name="rx_new_releases">Rx New Releases</string>
    <string name="new_releases">New Releases</string>
    <string name="categories">Browse Categories</string>
    <string name="playlists">PlayLists</string>
    <string name="albums">Albums</string>


    //Splash Screen
    <string name="splash_text">Shower</string>

    //New Releases
    <string name="tile_title_textView_ct">Title</string>

    //Toolbar
    <string name="album_detail">Album Detail</string>

    // SVG
    <string name="play">M 6 4.5 L 12.375 8.25 L 12.375 15.75 L 6 19.5
        M 12.375 8.25 L 18.75 12 L 18.75 12 L 12.375 15.75
    </string>

    <string name="pause">M 4.5 6 L 19.5 6 L  19.5 10.5 L 4.5 10.5
        M 4.5 14.25 L 19.5 14.25 L 19.5 18.75 L 4.5 18.75
    </string>

</resources>
