<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/new_releases"
        android:icon="@drawable/ic_releases"
        android:title="@string/new_releases" />
    <item
        android:id="@+id/playlists"
        android:icon="@drawable/ic_playlists"
        android:title="@string/playlists" />
    <item
        android:id="@+id/albums"
        android:icon="@drawable/ic_albums"
        android:title="@string/albums" />
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_categories"
        android:title="@string/categories" />
    <item
        android:id="@+id/me"
        android:icon="@drawable/ic_me"
        android:title="@string/my_account" />

    <item
        android:id="@+id/sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_out" />
</menu>